[package]
name = "crustasync"
description = "A file syncing cli/lib written in the crustacean language"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { verson = "0.4.38", features = ["serde"] }
clap = "4.5.4"
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
uuid = {version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
hex = "0.4.3"
