[package]
name = "crustasync"
description = "A file syncing cli/lib written in the crustacean language"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "string"] }
log = "0.4.22"
env_logger = "0.11.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
uuid = {version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
hex = "0.4.3"
anyhow = "1.0.89"
url = "2.5.2"
rand = "0.9.0"
base64 = "0.22.1"
sha2 = "0.10.8"
reqwest = { version = "0.12.8", features = ["json"] }
itertools = "0.14.0"
async-trait = "0.1.85"
